# ray-tracer

./: CMakeLists.txt  main.cpp  teste.cpp
box/: AABB.cpp  AABB.h  BoxHit.h
engine/: Hit.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h
parser/: Element.cpp  ObjParser.h  RTParser.cpp  RTParser.h
things/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
tree/: KDTree.cpp  KDTree.h  Node.cpp  Node.h
util/: Element.h  Globals.cpp  Globals.h  HitBox.h  MissingMethods.h  ObjParser.cpp  ObjParser.h  Parser.cpp  Parser.h  RTParser.cpp  RTParser.h  text.h
world/: LightSource.cpp  LightSource.h  Material.h  Thing.cpp  Thing.h  World.cpp  World.h
